# image-text

./: .gitignore  CMakeLists.txt  Callback.h  main.cpp
.claude/: settings.local.json
.mimocode/plans/: 1781436009481-calm-star.md  1781792482168-tidy-falcon.md
Sources/: ChatLogWidget.cpp  ConPtyProcess.cpp  ConfigService.cpp  ConfigSyncClient.cpp  DashboardPage.cpp  FileServerPage.cpp  ImgTool.cpp  MainWindow.cpp  ModuleRegistry.cpp  QtWebSocketClient.cpp  RecognizeUtil.cpp  SettingsDialog.cpp  ShellManagerPage.cpp  StarBackground.cpp  TableItemDelegate.cpp  TranslationPage.cpp  UnicodeUtil.cpp  WebSocketClient.cpp  WebSocketPage.cpp  mainwindow.cpp  websocket_client.cpp
Sources/Froms/: MainWindow.ui  WebSocketPage.ui
Sources/Headers/: ChatLogWidget.h  ConPtyProcess.h  ConfigService.h  ConfigSyncClient.h  DashboardPage.h  FileServerPage.h  ImgTool.h  MainWindow.h  ModuleInfo.h  ModuleRegistry.h  QtWebSocketClient.h  RecognizeUtil.h  SettingsDialog.h  ShellManagerPage.h  StarBackground.h  TableItemDelegate.h  TranslationPage.h  UnifiedCard.h  WebSocketClient.h  WebSocketPage.h  mainwindow.h  websocket_client.h
resources/: resources.qrc
